2011-01-16  Francois Suter  <francois.suter@typo3.org>

	* Follow-up to #16966: Missing trailing comma in sliding fields list caused SQL error

2011-01-15  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #16911: Restructure of t3lib_utility_Mail hook subscriber

2011-01-15  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #16936: wizardtitle "Versioning and Workspaces: Migrate "draft" workspace" is misleading

2011-01-15  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17051: Typo in CSH text (Thanks to Christopher Stelmaszyk)

2011-01-14  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #17035: Positioning and JS behaviour of the icon to clear input fields are suboptimal (Thanks to Jo Hasenau)
	* Fixed bug #16028: Enable "clear input field" functionality by default (Thanks to Jo Hasenau)
	* Fixed bug #16256 Bug: Hardcoded label when editing a Page (Thanks to Jo Hasenau)

2011-01-14  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16848: CSH in FlexForms does not work anymore

2011-01-14  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16996: CSH tooltip shows for too long time (Thanks to Christian Mueller)
	* Fixed bug #17001: Rename config.doctype value "html_5" to "html5" (Thanks to Sebastian Michaelsen)

2011-01-14  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17042: Double class attribute for select tag of tceforms "type=select" if using icons
	* Fixed bug #17036: Misleading deprecation comment getReferenceHTML()
	* Fixed bug #17034: Live search also returns records which not available to the user (Thanks to Peter Beernink)
	* Follow-up to #17032: Remove early return

2011-01-14  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17032: Backend search throws Exceptions / SQL errors when running as non-admin

2011-01-14  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed issue #16698: sys_history: optimize indexes (Thanks to Juergen Deisenroth and Christian Kuhn)
